tests/should_fail/type_void_to_int.nv
module type_void_to_int
// Should fail: assigning void function result to typed variable
fn greet() { println("hello") }
let x: Int = greet()
